# swift-firebase

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Package.resolved  Package.swift  README.md  run.ps1
.github/workflows/: build.yml
Examples/FireBaseUI/: FireBaseUI.exe.manifest  FireBaseUI.swift  FireBaseUIViewController.swift  FirestoreTestingViewController.swift  Info.plist  SceneDelegate.swift  SwiftWin32+Extensions.swift
Examples/FireBaseUI/Resources/: google-services.json
Sources/FirebaseAndroid/: CMakeLists.txt  Native.java  abi.h  jni.c  log.h
Sources/FirebaseAndroid/include/: FirebaseAndroid.h  module.modulemap
Sources/FirebaseAuth/: AuthStateDidChangeListenerHandle.swift  FIRActionCodeOperation.swift  FIRAuthTokenResult.swift  FirebaseAuth+Swift.swift  FirebaseAuthError.swift  FirebaseAuthResult+Swift.swift  FirebaseEmailAuthProvider.swift  FirebaseUser+Swift.swift
Sources/FirebaseCore/: FirebaseApp+Swift.swift  FirebaseConfiguration.swift  FirebaseError.swift  FirebaseLogging+Swift.swift  FirebaseOptions+Swift.swift  FutureProtocol.swift  Variant+Swift.swift
Sources/FirebaseFirestore/: CollectionReference+Swift.swift  CollectionReference.swift  DocumentChange+Swift.swift  DocumentReference+Swift.swift  DocumentReference.swift  DocumentSnapshot+Swift.swift  DocumentSnapshot.swift  FieldValue+Swift.swift  Firestore+Swift.swift  FirestoreCoding.swift  FirestoreDataConverter.swift  FirestoreErrorCode.swift  FirestoreSource+Swift.swift  FutureSupport.swift  ListenerRegistration.swift  NSError+FirestoreError.swift  Query+Swift.swift  QueryDocumentSnapshot.swift  QuerySnapshot+Swift.swift  Settings+Swift.swift  Settings.swift  SnapshotMetadata+Swift.swift  Timestamp+Swift.swift  Transaction+Swift.swift  TransactionOptions+Swift.swift  WriteBatch+Swift.swift
Sources/FirebaseFunctions/: FirebaseFunctionsErrorCode.swift  Functions+Swift.swift  FunctionsErrorCode.swift  HTTPSCallable+Swift.swift  HTTPSCallableResult+Swift.swift
Sources/FirebaseStorage/: Storage+Swift.swift  StorageErrorCode.swift  StorageMetadata+Swift.swift  StorageReference+Swift.swift
Sources/firebase/: shims.cc
Sources/firebase/include/: FirebaseApp.hh  FirebaseAuth.hh  FirebaseCore.hh  FirebaseFirestore.hh  FirebaseFunctions.hh  FirebaseLogging.hh  FirebaseStorage.hh  TransactionWeakReference.hh  firebase.apinotes  module.modulemap
patches/: 0001-Add-a-couple-of-workarounds-for-Swift-on-Windows.patch
